// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing shouldAddReaction function should fail due to invalid emoji (null) 1`] = `
Object {
  "message": "    
    expected: emojis parameter to be an array with string or objects
    received: null
",
  "pass": false,
  "testName": "shouldAddReaction",
  "trace": "    at shouldAddReaction Object.<anonymous> (tests\\\\command\\\\message\\\\shouldAddReaction.test.ts:47:37)",
}
`;

exports[`testing shouldAddReaction function should fail due to invalid emoji (object) 1`] = `
Object {
  "message": "    
    expected: emojis parameter to be an array with string or objects
    received: object
",
  "pass": false,
  "testName": "shouldAddReaction",
  "trace": "    at shouldAddReaction Object.<anonymous> (tests\\\\command\\\\message\\\\shouldAddReaction.test.ts:53:6)",
}
`;

exports[`testing shouldAddReaction function should fail due to invalid emoji (undefined) 1`] = `
Object {
  "message": "    
    expected: emojis parameter to be an array with string or objects
    received: undefined
",
  "pass": false,
  "testName": "shouldAddReaction",
  "trace": "    at shouldAddReaction Object.<anonymous> (tests\\\\command\\\\message\\\\shouldAddReaction.test.ts:42:37)",
}
`;

exports[`testing shouldAddReaction function should fail due to invalid messageIdentifier (number) 1`] = `
Object {
  "message": "    
    expect: message data to be null, undefined, string or an object with id or text properties
    received: number
",
  "pass": false,
  "testName": "shouldAddReaction",
}
`;

exports[`testing shouldAddReaction function should return a failed test due to failure in message sending 1`] = `
Object {
  "message": "    
    can not send message to channel x
",
  "pass": false,
  "testName": "shouldAddReaction",
  "trace": "    at shouldAddReaction Object.<anonymous> (tests\\\\command\\\\message\\\\shouldAddReaction.test.ts:118:37)",
}
`;

exports[`testing shouldAddReaction function should return a failed test with isNot = false 1`] = `
Object {
  "message": "    
    expected: to add reactions 😀
    received: no reaction was added to message
",
  "pass": false,
  "testName": "shouldAddReaction",
  "trace": "    at shouldAddReaction Object.<anonymous> (tests\\\\command\\\\message\\\\shouldAddReaction.test.ts:73:37)",
}
`;

exports[`testing shouldAddReaction function should return a failed test with isNot = false and emoji object with id and other with name 1`] = `
Object {
  "message": "    
    expected: to add reactions 312322220410652501, 😀
    received: no reaction was added to message
",
  "pass": false,
  "testName": "shouldAddReaction",
  "trace": "    at shouldAddReaction Object.<anonymous> (tests\\\\command\\\\message\\\\shouldAddReaction.test.ts:105:37)",
}
`;

exports[`testing shouldAddReaction function should return a failed test with isNot = false and timeout 1`] = `
Object {
  "message": "    
    expected: to add reactions 😀
    received: 😀
",
  "pass": false,
  "testName": "shouldAddReaction",
  "trace": "    at shouldAddReaction Object.<anonymous> (tests\\\\command\\\\message\\\\shouldAddReaction.test.ts:81:37)",
}
`;

exports[`testing shouldAddReaction function should return a failed test with isNot = true 1`] = `
Object {
  "message": "    
    expected: not to add reactions 😀
    received: 😀
",
  "pass": false,
  "testName": "shouldAddReaction",
  "trace": "    at shouldAddReaction Object.<anonymous> (tests\\\\command\\\\message\\\\shouldAddReaction.test.ts:97:41)",
}
`;

exports[`testing shouldAddReaction function should return a passed test with isNot = false 1`] = `
Object {
  "pass": true,
  "testName": "shouldAddReaction",
}
`;

exports[`testing shouldAddReaction function should return a passed test with isNot = false 2`] = `
Object {
  "pass": true,
  "testName": "shouldAddReaction",
}
`;

exports[`testing shouldAddReaction function should return a passed test with isNot = true 1`] = `
Object {
  "pass": true,
  "testName": "shouldAddReaction",
}
`;
